# guess

./: .gitignore  Cargo.toml  README.md  param.yaml  param_temp.txt  riemann.hs
examples/: 1D.ron  KT.ron  gubser_cexpl.ron  gubser_impl.ron  hydro_expl.ron  hydro_impl.ron  impl.ron  init_cond.ron  init_cond.yaml
examples/impl/0/: moments.txt
examples/trento/: .gitignore  README.md  auto  init.h5  new  plt  trento.ron
param/: 1D.ron  3D.ron  KT.ron  e_51n_50c  expl  gubser.ron  gubser_1e-1dt_51n_.ron  gubser_1e-1dt_51n_impl.ron  gubser_1e-3dt_51n_.ron  gubser_cexpl.ron  gubser_expl.ron  gubser_impl.ron  hydro_1e-2er_128n.ron  hydro_impl.ron  impl.ron  init_cond.ron  init_cond.txt  init_cond.yaml  param.yaml  test  ttt  vecto.yaml
src/: concurrent_hdf5.rs  fourierTransform.cl  fuse.rs  lib.rs  main.rs  param.ron  parameters.rs  simulation.rs
src/fuse/: array_t.rs  data.rs  line.rs
src/gpgpu/: algorithms.rs  data_file.rs  descriptors.rs  functions.rs  handler.rs  integrators.rs  kernels.rs  pde_parser.rs
src/gpgpu/handler/: handler_builder.rs
src/gpgpu/pde_parser/: pde_ir.rs  pde_lexer.rs
src/simulation/: parameters.rs
src/simulation/parameters/: actions.rs  activations.rs  integrators.rs  symbols.rs
ushf_fuse/: Cargo.toml
ushf_fuse/param/param1D0/: correlation.yaml  dynamic_structure_factor.yaml  moments.yaml  static_structure_factor.yaml  window.yaml
ushf_fuse/param/param1D1/: correlation.yaml  moments.yaml  (+3 more)
ushf_fuse/src/: main.rs
utils/: data2columns.py  env  gubser.hs  guess  guess_sub  parse  parse.py  plot  riemann  riemann.hs  ushf_sub
(+24 files in other folders)
