[package]
name = "ushf"
version = "0.1.0"
authors = ["xayon40-12 <touroux.nathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
gpgpu = { path = "../gpgpu-rs" }
regex = "1.3.7"
clap = "2.33.0"
