[package]
name = "guess"
version = "0.1.0"
authors = ["xayon40-12 <touroux.nathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
clap = "2.33.0"
ron = "*"
rayon = "1.5"
nom = "7.1.0"
ocl = "0.19"
ocl-core = "0.11.3"
typetag = "0.1"
decorum = "0.3.1"
itertools = "0.10.5"
